# uauth

./: .env  Cargo.toml  Dockerfile  build-for-linux.sh
migrations/2020-11-28-224405_create_users/: up.sql
migrations/2020-11-28-230220_create_session_keys/: down.sql  up.sql
src/: authentication.rs  config.rs  crypto.rs  errors.rs  main.rs  models.rs  schema.rs  users.rs
