[package]
name = "uauth"
version = "0.1.0"
authors = ["Mingrui Huang <mingrui.huang@setl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
uuid = "0.6"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
ring = "0.16.18"
data-encoding = "2.3.1"
