[package]
name = "uauth"
version = "0.1.0"
authors = ["Mingrui Huang <mingrui.huang@setl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = {version = "0.4.6", features = ["diesel_postgres_pool"]}
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
uuid = {version = "0.6", features = ["serde", "v4"]}
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
ring = "0.16.18"
data-encoding = "2.3.1"
log = "0.4"
diesel_migrations = "1.3"
rocket_cors = { version = "0.5.1", default-features = false }
